@@ -1,4 +1,5 @@
 Changes towards version 0.3:
+- Cleanup shipyard door animation (bug 215) -PhracturedBlue
 - Misc .ani fixes; Fixes asteroid destruction crash (bugs 150, 155, 158)
   and somewhat fixes Mycon potrait (bug #183) -fOSSiL
 - Moved image scaling to DCQ thread; fixes scale-out-of-sync problem 
